Clean up opaque template trait usage

--- a/tool/templates/shared_rust/opaque.rs.jinja
+++ b/tool/templates/shared_rust/opaque.rs.jinja
@@ -6,14 +6,14 @@
 
 {% endif -%}
 
-pub struct {{type_name}}{{self.render_generic_lifetimes()}} {%- if lifetimes.len() > 0 %} {
+pub struct {{type_name}}{{self.generic_lifetimes()}} {%- if lifetimes.len() > 0 %} {
     {%- for lt in lifetimes %}
     {{ lifetime_env.fmt_lifetime(*lt) }}_marker : PhantomData<&'{{lifetime_env.fmt_lifetime(*lt)}} ()>,
     {%- endfor %}
 }
 {%- else -%} ; {%- endif %}
 
-impl{{self.render_generic_lifetimes()}} Drop for {{type_name}}{{self.render_generic_lifetimes()}} {
+impl{{self.generic_lifetimes()}} Drop for {{type_name}}{{self.generic_lifetimes()}} {
     fn drop(&mut self) {
         unsafe { {{dtor_abi}}(self) }
     }
