--- a/tool/templates/shared_rust/lib.rs.jinja
+++ b/tool/templates/shared_rust/lib.rs.jinja
@@ -2,9 +2,8 @@ use std::mem::ManuallyDrop;
 use std::ffi::c_void;
 
 {% for m in mods -%}
-{%- let vis = m.vis.clone().unwrap_or_default() -%}
-pub{{vis}} mod {{m.mod_name}};
-pub{{vis}} use {{m.mod_name}}::{{m.type_name}};
+pub mod {{m.mod_name}};
+pub use {{m.mod_name}}::{{m.type_name}};
 
 {% endfor -%}
 
