--- a/tool/templates/shared_rust/base.rs.jinja
+++ b/tool/templates/shared_rust/base.rs.jinja
@@ -9,6 +9,8 @@ impl {{- self.generic_lifetimes() }} {{type_name}} {{- self.generic_lifetimes()}
 {%- for m in methods %}
     {{ m.as_function_impl()|indent(4) }}
 {% endfor %}
+{%- block extra_impl -%}
+{%- endblock -%}
 }
 
 #[link(name = "{{lib_name}}")]
